This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - Panorama View:
            - added z-index option for icons
          - Bug Fixes
            - fixed rendering icons above dashboard settings window
            - fixed recurring downtimes not beeing saved under some conditions with multiple backends
            - fixed problem in servicegroup recurring downtimes
            - fixed half-visible panorama buttons in IE11
            - fixed panorama shape rotation in IE11
            - fixed panorama column error in minemap

1.84-3   Sat May 31 16:10:07 CEST 2014
          - added csrf_allowed_hosts configuration option
          - allow unicode characters in performance data units
          - Panorama View:
            - iconsets may now contain png, jpg or gif images
            - added dashboard_ignore_changes configuration option (Franky Van Liedekerke)
            - reschedule next check when refreshing single icon with host/service
          - Business Process
            - added easier host:* status aggregation
          - Bug Fixes
            - fixed calculation of computed configuration in config tool
            - fixed panorama icon size in IE8
            - fixed problem with group/user specific settings
            - fixed exclude pattern when using logcache
            - fixed unicode problem in panorama labels
            - fixed rotation shapes when switching from icon style

1.84-2   Sat May 17 16:49:45 CEST 2014
          - Panorama View:
            - icons snap to raster on drag/drop when shift key is hold
          - Bug Fixes
            - fixed removing old sessions with cookie auth
            - fixed panorama filter containing pipes
            - fixed panorama not showing usercontent
            - fixed panorama servicegroup popup details
            - fixed cookie auth problem when accessing site without trailing slash

1.84     Sat May 10 20:58:24 CEST 2014