@@ -20321,9 +20321,11 @@ variables. Use * as wildcard, ex.: _VAR*</p></div>
 <div class="sect3">
 <h4 id="_show_error_reports">show_error_reports</h4>
 <div class="paragraph"><p>Show link to bug reports when internal errors occur.
-Set to <em>server</em> to log js error server side.</p></div>
+Set to <em>1</em> to show a error icon which links to a error report mail.
+Set to <em>server</em> to log js error server side.
+Set to <em>both</em> to log server side but still show the icon.</p></div>
 <div class="paragraph"><p>ex.:
-  show_error_reports = 1</p></div>
+  show_error_reports = both</p></div>
 </div>
 <div class="sect3">
 <h4 id="_skip_js_errors">skip_js_errors</h4>
@@ -25125,7 +25127,7 @@ EzABEzCBdgQ8AGnHzb5MwARMwARMwARMwARMwARaEPgfKeP/z2smrv8AAAAASUVORK5CYII=" />
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-05-28 23:39:47 CEST
+Last updated 2014-06-16 16:35:48 CEST
 </div>
 </div>
 </body>
