@@ -17,9 +17,10 @@ window.onerror = function(msg, url, line) {
     if(msg.match(/[% skip %]/)) { return false; }
     [% END +%]
     var text = getErrorText("[% debug_details.replace('\n', '\\n') %]\n");
-    [%+ IF show_error_reports == "server" %]
+    [%+ IF show_error_reports == "server" || show_error_reports == "both" %]
     sendJSError("[% url_prefix %]cgi-bin/remote.cgi?log", text);
-    [% ELSE %]
+    [% END +%]
+    [%+ IF show_error_reports == "1" || show_error_reports == "both" %]
     showBugReport('bug_report', text);
     [% END +%]
   }
