@@ -524,8 +524,9 @@ mobile_agent=iPhone,Android,IEMobile
 #####################################
 # bug reporting
 # show link to bug reports when internal errors occur.
-# set to 'server' to log js error server side
-show_error_reports = 1
+# set to 'server' to log js error server side. Set to 'both'
+# to show the error icon and log it on the server.
+show_error_reports = both
 
 # don't report some known harmless javascript errors
 skip_js_errors  = cluetip is not a function
