@@ -1,6 +1,8 @@
 This file documents the revision history for the Monitoring Webinterface Thruk.
 
 next:
+          - added show_error_reports mode 'both' which shows the error indicator but logs to server side
+          - set default show_error_reports mode to 'both' to make error handling easier
           - Panorama View:
             - added z-index option for icons
           - Bug Fixes
